fix autoWidth: touch on ios safari/chrome

--- a/src/tiny-slider.scss
+++ b/src/tiny-slider.scss
@@ -69,6 +69,7 @@
     transition: all 0.25s;
   }
 }
+.tns-autowidth { display: inline-block; }
 .tns-lazy-img {
   -webkit-transition: opacity 0.6s;
   -moz-transition: opacity 0.6s;
